feat: simplify lambda expressions and enhance dependency injection annotations